# geocat-viz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  conda_environment.yml  meta.yaml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  upstream-failure-issue-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  plot-type-request.md  release.md
.github/workflows/: ci.yml  pre-commit.yml  pypi.yaml  upstream-dev-ci.yml  upstream-examples-ci.yml
build_envs/: docs.yml  environment.yml  min-deps.yml  upstream-dev-environment.yml
ci/: docs.yml  environment.yml  install-upstream.sh  upstream_environment.yml
docs/: api.rst  citation.rst  conda_environment.yml  conf.py  contrib.rst  examples.rst  gallery.yml  getting-started.rst  index.rst  installation.rst  release-notes.rst  support.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_static/: theme_overrides.css
docs/_templates/autosummary/: class.rst
docs/examples/: add_height_from_pressure_axis.ipynb  add_lat_lon_gridlines.ipynb  add_lat_lon_ticklabels.ipynb  add_major_minor_ticks.ipynb  add_right_hand_axis.ipynb  find_local_extrema.ipynb  generate_2d_array.ipynb  get_skewt_vars.ipynb  plot_contour_labels.ipynb  plot_extrema_labels.ipynb  set_axes_limits_and_ticks.ipynb  set_tick_direction_spine_visibility.ipynb  set_titles_and_labels.ipynb  taylor.ipynb
docs/getting_started/: mini-examples.rst  overview.rst  quick-install.rst
docs/internal_api/: index.rst
docs/user_api/: index.rst
examples/util/: add_lat_lon_gridlines.ipynb
gallery/util/: add_height_from_pressure_axis.ipynb  add_lat_lon_ticklabels.ipynb
src/: __init__.py  util.py
src/geocat/viz/: __init__.py  _version.py  cmaps.py  contourf.py  plot_util.py  taylor.py  test.py  util.py
src/geocat/viz/contourf/: __init__.py  _add_geo_features.py  _plot_util.py  _set_up_fig.py  contourf.py  init.py  test.py
src/geocat/viz/plot_classes/: __init__.py  _plot_util.py  contourf.py  test.py
src/geocat/viz/plot_util/: __init__.py  _plot_util.py
src/geocat/viz/plot_util/contourf/: __init__.py  contourf.py
src/geocat/viz/taylor/: __init__.py  taylor.py
src/geocat/viz/util/: util.py
src/taylor/: ref_taylor.py  taylor.py  taylor_statistics.py
tests/: test_taylor.py  test_util.py
