[project]
name = "geocat.viz"
authors = [{ name = "GeoCAT Team", email = "geocat@ucar.edu" }]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
description = "GeoCAT-viz is the visualization component of the GeoCAT project and provides implementations of convenience functions for publication-ready plotting of geosciences data"
dynamic = ["version"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "packaging",
  "matplotlib",
  "xarray",
  "numpy",
  "cartopy",
  "cmaps",
  "metpy",
  "pint",
  "scikit-learn"
]

[dependency-groups]
dev = [
  "geocat-datafiles",
  "pre-commit",
  "pytest",
  "pytest-mpl"
]

[project.urls]
documentation = "https://geocat-viz.readthedocs.io"
issue-tracker = "https://github.com/NCAR/geocat-viz/issues"
source-code = "https://github.com/NCAR/geocat-viz"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.ruff.format]
# preserve mixture of single and double quotes
quote-style = "preserve"

[tool.ruff.lint]
# Skip E402 Module level import not at top of cell
# Skip F401 Module imported but unused
ignore = ["E402", "F401"]
