[metadata]
name = geocat.viz
version = attr: setuptools_scm.get_version
author = GeoCAT Team
author_email = geocat@ucar.edu
description= GeoCAT-viz is vizualization component of the GeoCAT project and
             provides implementations of convenience functions for publication-ready plotting
             of geosciences data
long_description_content_type=text/markdown
long_description = file: README.md
url = https://geocat-viz.readthedocs.io
license = Apache-2.0
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.9, <3.13
package_dir =
    =src
packages =
    geocat
    geocat.viz
setup_requires =
    setuptools_scm
    setuptools
    pip
install_requires =
    matplotlib
    xarray
    numpy
    cartopy
    cmaps
    setuptools
    scikit-learn
    metpy

[options.extras_require]
docs =
    ipykernel
    ipython
    sphinx_rtd_theme
    jupyter_client
    matplotlib-base
    sphinx-book-theme
    myst-nb
    sphinx-design
    geocat-datafiles
    geocat-viz
    nbsphinx
    netcdf4

[tool:pytest]
python_files = test_*.py
testpaths = test

[aliases]
test = pytest
